--- a/exercicios/ex022/fundo002.html
+++ b/exercicios/ex022/fundo002.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Personalizando fundos</title>
+    <style>
+        body {
+            background-image: url(imagens/pattern001.png);
+            background-size: 100px 100px;
+            background-repeat: repeat-y;
+        }
+    </style>
 </head>
 <body>
     
