--- a/desafios/d013/tabela002.html
+++ b/desafios/d013/tabela002.html
@@ -12,50 +12,41 @@
 
         table {
             width: 400px;
-            height: 400px;
-            border-collapse: collapse;
-            
         }
 
         td {
             border: 1px solid black;
             padding: 8px;
             text-align: center;
-            vertical-align: top;
-        }
-        
-        .numero {
-            text-align: right;
-            vertical-align: middle;
         }
     </style>
 </head>
 <body>
-    <h1>Minha primeira tabela</h1>
+    <h1>Desafio 13 parte 2</h1>
+
     <table>
         <tr>
-            <td>A1</td>
-            <td>B1</td>
-            <td>C1</td>
-            <td>D1</td>
+            <td colspan="4">A</td>
+            <td rowspan="4">B</td>
         </tr>
         <tr>
-            <td>A2</td>
-            <td>B2</td>
-            <td class="numero">C2</td>
-            <td>D2</td>
+            <td rowspan="4">C</td>
+            <td>D</td>
+            <td>E</td>
+            <td>F</td>
         </tr>
         <tr>
-            <td>A3</td>
-            <td>B3</td>
-            <td class="numero">C3</td>
-            <td>D3</td>
+            <td>G</td>
+            <td>H</td>
+            <td>I</td>
         </tr>
         <tr>
-            <td>A4</td>
-            <td >B4</td>
-            <td>C4</td>
-            <td>D4</td>
+            <td>J</td>
+            <td>L</td>
+            <td>M</td>
+        </tr>
+        <tr>
+            <td colspan="4">N</td>
         </tr>
     </table>
 </body>
